# llm-eval

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.tf  pyproject.toml  terraform.tfvars.example
.github/workflows/: docker-build.yml  test.yml
data/predefined/: gsm8k_100.parquet  mathqa_100.parquet
src/: app.py  config.py  dataset_loader.py  grading.py  utils.py
tests/: test_utils.py
