[project]
name = "llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.59.8",
    "pandas>=2.2.3",
    "pip>=25.0",
    "pyarrow>=19.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
